src/test/ui/consts/single_variant_match_ice.stderr
error[E0019]: constant contains unimplemented expression type
  --> $DIR/single_variant_match_ice.rs:6:5
   |
LL |     Foo::Prob => 42,
   |     ^^^^^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/single_variant_match_ice.rs:10:5
   |
LL |     x => 42,
   |     ^

error[E0723]: loops and conditional expressions are not stable in const fn
  --> $DIR/single_variant_match_ice.rs:18:13
   |
LL |             Prob => 0x1,
   |             ^^^^
   |
   = note: for more information, see issue https://github.com/rust-lang/rust/issues/57563
   = help: add #![feature(const_fn)] to the crate attributes to enable

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0019, E0723.
For more information about an error, try `rustc --explain E0019`.
